--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.11.0",
     "mongoose": "^8.8.1",
     "nodemon": "^3.1.7",
     "react": "^18.3.1",
